# zcash_dart

./: .gitignore  LICENSE  LICENSE_ZCASH  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
example/: pubspec.yaml
example/lib/examples/: address_example.dart  transfer_example.dart  utils.dart  zk_lib_example.dart
lib/: zcash.dart
lib/src/: log.dart
lib/src/address/: address.dart
lib/src/block_processor/: block_processor.dart
lib/src/crypto/: crypto.dart
lib/src/exception/: exception.dart
lib/src/merkle/: merkle.dart
lib/src/note/: note.dart
lib/src/orchard/: orchard.dart
lib/src/pczt/: pczt.dart
lib/src/provider/: provider.dart
lib/src/sapling/: sapling.dart
lib/src/sprout/: sprout.dart
lib/src/value/: value.dart
test/address/: address_test.dart
test/incrementalmerkletree/: address_test.dart  prunable_test.dart  store_test.dart  types.dart
test/note/: orchard_test.dart  sapling_test.dart
test/orchard/: builder_test.dart  circuit_test.dart  tree_test.dart
test/pczt/: pczt_test.dart
test/pedersen_hash/: pedersen_hash_test.dart
test/reddsa/: redjubjub_test.dart  redpallas_test.dart
test/sapling/: builder_test.dart
test/transaction/: serialization_test.dart
test/transparent/: builder_transparent_test.dart
zk/: Cargo.toml  LICENSE
zk/src/: error.rs  ffi.rs  io_parameters.rs  lib.rs  wasm.rs
zk/src/orchard/: mod.rs  params.rs
zk/src/sapling/: circuit.rs  mod.rs  params.rs  prover.rs
zk/wasm/: worker.mjs  zk.d.ts  zk_bg.wasm  zk_bg.wasm.d.ts
(+202 files in other folders)
